--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,6 @@ body{
         @apply mx-[-1.5rem] px-6 md:mx-[-2.5rem] md:px-10 lg:!mx-[-10.3125rem] lg:!px-[10.3125rem];
     }
     .button{
-        @apply transition-all uppercase py-[0.9375rem] pl-[1.96875rem] pr-[1.84375rem] bg-orange hover:bg-pale-orange hover:scale-[.98] cursor-pointer
+        @apply transition-all uppercase py-[0.9375rem] pl-[1.96875rem] pr-[1.84375rem] text-white text-sub-title bg-orange hover:bg-pale-orange hover:scale-[.98] cursor-pointer flex items-center justify-center
     }
 }
