--- a/src/index.css
+++ b/src/index.css
@@ -28,4 +28,22 @@ body{
     .button{
         @apply transition-all uppercase py-[0.9375rem] pl-[1.96875rem] pr-[1.84375rem] text-white text-sub-title bg-orange hover:bg-pale-orange hover:scale-[.98] cursor-pointer flex items-center justify-center
     }
+    .featured-product{
+        @apply relative flex flex-col justify-end [&:nth-of-type(3n+1)]:px-6 [&:nth-of-type(3n+1)]:py-[3.4375rem] [&:nth-child(3n+1)]:text-white text-center rounded-lg overflow-hidden [&:nth-of-type(3n+1)]:min-h-[37.5rem] [&:nth-of-type(2n)]:min-h-[20rem] [&:nth-of-type(2n)]:justify-center [&:nth-of-type(2n)]:items-start [&:nth-of-type(2n)]:pl-6 [&:nth-of-type(3n+1)]:md:min-h-[45rem] [&:nth-of-type(3n)]:md:grid [&:nth-of-type(3n)]:md:grid-cols-2 [&:nth-of-type(3n)]:md:gap-[10px] [&:nth-of-type(3n+1)]:lg:min-h-[35rem]  [&:nth-of-type(3n+1)]:lg:pl-[41.625rem] [&:nth-of-type(3n+1)]:lg:text-left
+    }
+    .featured-container{
+        @apply flex flex-col gap-8 [&:nth-child(3n+1)]:gap-6 group-[&:nth-child(3n)]:mt-6 group-[&:nth-child(3n)]:bg-grey group-[&:nth-child(3n)]:py-[2.5625rem] group-[&:nth-child(3n)]:justify-start group-[&:nth-child(3n)]:rounded-lg group-[&:nth-of-type(3n)]:md:mt-0 group-[&:nth-of-type(3n)]:md:pl-[2.5rem] group-[&:nth-of-type(3n+1)]:lg:max-w-[18.9375rem]
+    }
+    .featured-title{
+        @apply group-[&:nth-child(3n)]:text-intro-title text-center uppercase text-h4 group-[&:nth-child(3n+1)]:md:text-intro-tablet group-[&:nth-of-type(3n)]:md:text-left group-[&:nth-of-type(3n+1)]:lg:text-left;;
+    }
+    .featured-image{
+        @apply group-[&:nth-child(2n)]:absolute group-[&:nth-child(3n+1)]:absolute top-0 bottom-0
+         left-0 right-0 -z-10 object-cover
+    }
+    /*SHOULD have separated prob somehow no sure how but ideas appreciated*/
+    .featured-button{
+        @apply transition-all min-h-12 w-40 mx-auto uppercase flex items-center justify-center border border-black
+        group-[&:nth-of-type(1)]:!bg-black   [&:nth-of-type(n-1)]:hover:bg-black [&:nth-of-type(n-1)]:hover:text-white group-[&:nth-of-type(1)]:hover:!bg-transparent group-[&:nth-of-type(2n)]:mx-0 group-[&:nth-of-type(3n)]:md:mx-0 group-[&:nth-of-type(3n+1)]:lg:mx-0
+    }
 }
