--- a/src/index.css
+++ b/src/index.css
@@ -46,4 +46,14 @@ body{
         @apply transition-all min-h-12 w-40 mx-auto uppercase flex items-center justify-center border border-black
         group-[&:nth-of-type(1)]:!bg-black   [&:nth-of-type(n-1)]:hover:bg-black [&:nth-of-type(n-1)]:hover:text-white group-[&:nth-of-type(1)]:hover:!bg-transparent group-[&:nth-of-type(2n)]:mx-0 group-[&:nth-of-type(3n)]:md:mx-0 group-[&:nth-of-type(3n+1)]:lg:mx-0
     }
+
+    .summary-item{
+        @apply flex justify-between items-center
+    }
+    .summary-title{
+        @apply opacity-50 text-body uppercase
+    }
+    .summary-price{
+        @apply text-h6 uppercase
+    }
 }
