--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,18 @@ body{
     width: 100%;
 }
 
+input[type=number] {
+    -moz-appearance: textfield;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input:user-invalid{
+    @apply text-red-700 border-red-700
+}
+
 @layer components{
 
 }
@@ -55,5 +67,8 @@ body{
     }
     .summary-price{
         @apply text-h6 uppercase
+    }
+    .form-group-title{
+        @apply text-orange uppercase text-sub-title mb-4
     }
 }
