--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,13 @@
     font-weight: 400 700;
 }
 
-
+html{
+    overflow-x: hidden;
+}
 body{
     width: 100%;
+    overflow-x: hidden;
+    overflow-x: clip;
 }
 
 input[type=number] {
